--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,5 +1,22 @@
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     background-color: $background-color;
     margin: 0;
     padding: 0;
+}
+
+#content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    canvas {
+        border: 2px solid white;
+    }
 }
